# qiskit-ionq

./: .buildinfo  .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  LICENSE  LICENSE.txt  MANIFEST.in  MIGRATION_2.0.md  Makefile  README.md  Untitled.ipynb  genindex.html  index.html  multi-circuit.ipynb  multicircuit_test.ipynb  objects.inv  py-modindex.html  pyproject.toml  requirements-docs.txt  requirements-test.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  sparse_pauli_exp.ipynb  tox.ini
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  ENHANCEMENT_REQUEST.md  FEATURE_REQUEST.md
.github/workflows/: ci.yml  docs.yml  main.yaml  pr.yml  pre-commit.yaml  release.yml
_modules/: index.html
_modules/qiskit_ionq/: exceptions.html  helpers.html  ionq_backend.html  ionq_client.html  ionq_job.html  ionq_provider.html  ionq_result.html
_sources/: index.rst.txt
_sources/apidocs/: backends.rst.txt  client.rst.txt  provider.rst.txt
_sources/guides/: access.rst.txt  usage.rst.txt
_static/: documentation_options.js
apidocs/: backends.html  client.html  exceptions.html  helpers.html  index.html  job.html  provider.html  result.html
docs/: Makefile  conf.py  index.rst
docs/_templates/: layout.html  theme_variables.jinja  versions.html
docs/apidocs/: backends.rst  client.rst  exceptions.rst  helpers.rst  index.rst  job.rst  provider.rst  result.rst
docs/guides/: access.rst  install.rst  qiskit_core.rst  usage.rst
example/: example.ipynb  qiskit_core_workflow.py
guides/: access.html  install.html  usage.html
qiskit/providers/ionq/: __init__.py  constants.py  credentials.py  exceptions.py  helpers.py  ionq_backend.py  ionq_client.py  ionq_job.py  ionq_provider.py  qobj_to_ionq.py  version.py
qiskit_ionq/: __init__.py  _qiskit_compat.py  _result.py  _submit.py  _target.py  _translate.py  backend.py  circuit_inspector.py  constants.py  error_mitigation.py  exceptions.py  gates.py  helpers.py  ionq_annotations.py  ionq_backend.py  ionq_client.py  ionq_custom_transpiler.py  ionq_equivalence_library.py  ionq_gates.py  ionq_job.py  ionq_native_stage.py  ionq_optimizer_plugin.py  ionq_primitives.py  ionq_provider.py  ionq_result.py  ionq_session.py  ionq_transpile.py  job.py  provider.py  rewrite_rules.py  sampler.py  session.py  version.py
qiskit_ionq_provider/: __init__.py  exceptions.py  helpers.py  ionq_backend.py  ionq_client.py  ionq_job.py  ionq_provider.py  version.py
test/: base.py  conftest.py  test_deprecation_warnings.py  test_exceptions.py  test_format_results.py  test_ionq_session_v2.py  test_mock.py  test_qobj_to_ionq.py  utils.py
test/helpers/: test_build_circuit.py  test_build_output_map.py  test_error_mitigation_settings.py  test_gate_serialization.py  test_helpers.py  test_qiskit_circ_to_ionq_circ.py  test_qiskit_to_ionq.py  test_qobj_to_ionq.py
test/ionq_backend/: test_base_backend.py  test_native_stage.py
test/ionq_client/: test_artifact.py
test/ionq_custom_transpiler/: test_ionq_custom_transpiler.py
test/ionq_gates/: test_gates.py
test/ionq_job/: __init__.py  test_format_results.py  test_job.py
test/ionq_optimizer_plugin/: __init__.py  test_ionq_optimizer_plugin.py
test/ionq_primitives/: __init__.py  test_ionq_primitives.py
test/ionq_provider/: test_backend_service.py
test/ionq_session/: test_session.py
test/ionq_tempo/: __init__.py  test_arrange_annotation.py  test_e2e.py  test_tempo_backend.py  test_v2_results.py  test_v2_submission.py
test/transpile_ionq_gates/: __init__.py  test_ionq_transpile.py  test_transpile_ionq_gates.py
tests/: conftest.py  integration_test.py  test_backend.py  test_gates.py  test_job.py  test_provider.py  test_result.py  test_sampler.py  test_session.py  test_submit.py  test_target.py  test_translate.py
tools/: deploy_documentation.sh  verify_headers.py
