[project]
name = "qiskit-ionq"
version = "0.1.0"
description = "Qiskit provider for IonQ quantum computers"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "qiskit>=2.0",
    "ionq-core>=0.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.9",
    "ty>=0.0.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qiskit_ionq"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["qiskit_ionq"]

[tool.ty.src]
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true
addopts = "--ignore=tests/integration_test.py"
